--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
     <script src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="/public/lib/lodash/dist/lodash.min.js"></script>
     <script src="/public/lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyCLdedizKTk_g5_zcgX-rAujeIwfhMeAl4&sensor=false'></script>
     <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
     <!-- Application Source Code -->
